--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ textarea {
   padding : 10px;
   color : #fff;
   position: absolute;
-
+}
 
 /* ==========================================================================
    Helper classes
