--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-.circle {opacity:.8}
+.circle {opacity:.8;}
 .circle:hover {opacity:1}
 
 .tooltip{
